[package]
name = "json_logger"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv-log-macro = "1.0"
backtrace = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }
env_logger = { version = "0.7", default_features = false }
log = { version = "0.4", features = ["kv_unstable", "std"]  }
serde_json = "1.0"

[features]
default = []
iso-timestamps = ["chrono"]
