[package]
name = "json_env_logger"
version = "0.1.3"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "A structured JSON logger for Rust"
documentation = "https://docs.rs/json_env_logger/"
homepage = "https://github.com/softprops/json-env-logger"
repository = "https://github.com/softprops/json-env-logger"
keywords = ["json", "log"]
license = "MIT"
categories = ["development-tools::debugging"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv-log-macro = "1.0"
backtrace = { version = "0.3", optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }
env_logger = { version = "0.7", default_features = false }
log = { version = "0.4", features = ["kv_unstable_std"]  }
serde_json = "1.0"

[features]
default = []
iso-timestamps = ["time"]
